feat: Modernize WebSwing 20.2 branch
- use JDK 11 only
- update Jetty
- update all possible third party libs
- replace the PNGEncoder
- remove the PDF Service