@@ -15,17 +15,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webswing</groupId>
-			<artifactId>webswing-app-toolkit-fx-java8</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webswing</groupId>
 			<artifactId>webswing-app-toolkit-fx-java11</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webswing</groupId>
-			<artifactId>webswing-app-toolkit-java8</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -45,11 +35,27 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<compilerArguments>
-						<bootclasspath>${basedir}/../lib/rt-1.8.jar</bootclasspath>
-					</compilerArguments>
+					<!--keep the code level at 8 to avoid module access compilation errors in IDE-->
+					<source>11</source>
+					<target>11</target>
+					<compilerArgs>
+						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.base/sun.nio.cs=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.java2d.loops=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
